# autocomplete

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
configs/: api.yaml  pipeline.yaml  train.yaml
models/: metadata.yaml
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/grafana/provisioning/dashboards/json/: autocomplete.json
monitoring/prometheus/: prometheus.yml
scripts/: generate_click_logs.py  run_feature_pipeline.py  run_load_trie.py  run_scorer.py  run_training_pipeline.py
src/autocomplete/: __init__.py  cache.py  scorer.py
src/autocomplete/api/: __init__.py  app.py
src/autocomplete/pipeline/: __init__.py  features.py  loader.py  run.py
src/autocomplete/training/: __init__.py  train.py
src/autocomplete/trie/: __init__.py  redis_trie.py
tests/: test_cache.py  test_trie.py
