[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocomplete-search"
version = "0.1.0"
description = "ML-powered autocomplete search with Redis trie and cache"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104",
  "uvicorn[standard]>=0.24",
  "redis>=5.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "prometheus-client>=0.19",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1", "httpx>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
